# AI-VideoDirector

./: .gitignore  ANIMATION_SYSTEM_V2.md  GUIA_USO_SISTEMA_V2.md  Lora_Trainer_XL.ipynb  MAPA_CONCEPTUAL.md  MEJORAS_IMPLEMENTADAS.md  PIPELINE_ANALYSIS.md  README.md  TECHNICAL_WORKFLOW.md  VIDEO_ASSEMBLY_README.md  main.py  pyproject.toml  test_long_format_plan.py
data/character_poses/: character_poses.json
data/final_segments/: segments_with_timestamps.json
output/: news_collection.json  video_script.json
scripts/: assemble_video.py  clean_json.py
src/: README.md  crew.py  main.py
src/ai/: createProductionPlan.py  generateAudioElevenlabs.py  generateImages.py
src/config/: __init__.py  agents.yaml  pipeline_config.py  tasks.yaml
src/handlers/: __init__.py  base_handler.py  command_handler.py  financial_shorts_handler.py  short_form_handler.py
src/orchestrators/: __init__.py  pipeline_orchestrator.py
src/pipeline_steps/: __init__.py
src/stages/: __init__.py  audio_stage.py  crew_stage.py  frame_stage.py  video_stage.py
src/tools/: audioSynchronizer.py  createBottomTicker.py  createTickerBackground.py  createTweetScreenshot.py  download_images.py  duckduckgo_tool.py  elevenlabs_tool.py  fix_animation_prompts.py  gemini_image_tool.py  videoAssembler.py  video_assembler_tool.py  whisperTool.py  whisper_tool.py
src/ui/: console.py
src/utils/: README.md  batch_remove_backgrounds.py  character_pose_generator.py  get_tweet.py  horizontal_layout_reference_generator.py  horizontal_studio_generator.py  horizontal_ticker_background_generator.py  (+3 more)
tests/: test_search.py
(+35 files in other folders)
